# diff-fuse

./: .gitignore  README.md
backend/: .coveragerc  .env.example  README.md  pyproject.toml  ruff.toml
backend/scripts/: quality.py
backend/src/diff_fuse/: __init__.py  cli.py  deps.py  main.py  settings.py
backend/src/diff_fuse/api/: __init__.py  router.py
backend/src/diff_fuse/api/dto/: __init__.py  (+8 more)
backend/src/diff_fuse/core/: array_keys.py  diff.py  flatten.py  merge.py  normalize.py  path_access.py  session_store.py
backend/src/diff_fuse/domain/: __init__.py  array_keys.py  diff.py  errors.py  flatten.py  merge.py  node_access.py  node_ids.py  normalize.py  path_access.py
backend/src/diff_fuse/models/: __init__.py  array_keys.py  array_strategies.py  arrays.py  base.py  diff.py  document.py  merge.py  session.py
backend/src/diff_fuse/services/: __init__.py  diff_service.py  export_service.py  keys_service.py  merge_service.py  session_service.py  shared.py
backend/src/diff_fuse/state/: __init__.py  memory_session_repo.py  redis_session_repo.py  session_repo.py  session_store.py
backend/tests/: conftest.py  test_diff.py  test_diff_arrays.py  test_export_endpoint.py  test_merge.py  test_merge_arrays.py  test_merge_endpoint.py  test_normalize.py  test_payload_container_values.py  test_session_endpoints.py  test_suggest_array_keys.py
backend/tests/api/: test_smoke.py
backend/tests/domain/: test_array_keys.py  test_diff.py  test_merge.py  test_node_access.py  test_normalize.py  test_path_access.py
backend/tests/services/: test_session_service.py
(+154 files in other folders)
