[project]
name = "diff-fuse"
version = "0.1.0"
description = ""
authors = [
    {name = "Mariia Steeghs-Turchina"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "orjson (>=3.11.7,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.1"
black = "^26.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "diff_fuse", from = "src"}]

[tool.poetry.scripts]
lint = "scripts.quality:lint"
fmt = "scripts.quality:fmt"
coverage-report = "scripts.quality:coverage_report"
dev = "diff_fuse.cli:dev"
serve = "diff_fuse.cli:serve"